# dirlisting

./: .adr-dir  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
docs/_static/css/: custom.css
docs/adr/: 0001-use-yaml-for-input.md  0002-accept-str-or-file.md  0003-match-unix-tree-listing.md  index.md
docs/examples/: input.yaml  unsorted.yaml
src/dirlisting/: __init__.py  __main__.py  cli.py  dirlisting.py
tests/: test_cli.py  test_dirlisting.py  test_helper.py
