[tool.poetry]
name = "dirlisting"
version = "0.1.0"
description = "Create a directory listing diagram from text file"
authors = ["Stephan Poole"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
