[tool.poetry]
name = "dirlisting"
version = "0.3.0"
description = "Create a directory listing diagram from text file"
authors = ["Stephan Poole"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
python-semantic-release = "^7.29.0"

[tool.poetry.scripts]
dirlisting = "dirlisting.cli:app"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]

[tool.semantic_release]
branch = "main"
version_toml = 'pyproject.toml:tool.poetry.version'
version_variable = [
    'src/dirlisting/__init__.py:__version__',
]
tag_format = "{version}"
upload_to_pypi = false
upload_to_release = true
patch_without_tag = true
build_command = "pip install poetry && poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
